implement print credit card
